# markspace

./: .gitignore  CLAUDE.md  README.en.md  README.md  pyproject.toml
backend/: .env.example  README.md  admin_cli.py  alembic.ini  config.yml  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/admin_account/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/attachment/: __init__.py  archival.py  dependencies.py  reference.py  repository.py  router.py  scheduler.py  schemas.py  service.py  storage.py
backend/app/auth/: repository.py  router.py  schemas.py  service.py
backend/app/common/: auth.py  db.py  errors.py  http.py  permissions.py  security.py
backend/app/document/: __init__.py  dependencies.py  engine.py  renderer.py  repository.py  router.py  schemas.py  service.py
backend/app/lock_version/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/models/: __init__.py  attachment.py  document.py  share_link.py  user.py  user_setting.py  workspace.py
backend/app/routers/: health.py
backend/app/schemas/: base.py
backend/app/sharing/: __init__.py  invalidation.py  public_service.py  repository.py  (+4 more)
backend/migrations/: env.py
backend/tests/: conftest.py  support.py  test_app_bootstrap.py  test_auth.py  test_base_schemas.py  test_config.py  test_contract_catalog.py  test_contract_invariants.py  test_db.py  test_errors.py  test_health.py  test_integration_wiring.py  test_migration_roundtrip.py  test_models.py  test_permissions.py  test_require_active_workspace.py  test_security.py
(+628 files in other folders)
