[project]
name = "markspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18",
    "apscheduler>=3.10",
    "fastapi>=0.139",
    "itsdangerous>=2.2",
    "markdown-it-py>=4.2.0",
    "nh3>=0.3.6",
    "pwdlib[argon2]>=0.3",
    "pydantic-settings>=2.14",
    "pymysql>=1.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.51,<2.1",
    "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=9.1.1",
]
